update the codes

--- a/application/eth1/enclave/Dockerfile
+++ b/application/eth1/enclave/Dockerfile
@@ -7,13 +7,14 @@ RUN yum install gcc python3 python3-devel net-tools -y
 
 WORKDIR /app
 
+COPY ./kms/kmstool_enclave_new_cli ./
 COPY ./kms/kmstool_enclave_cli ./
 COPY ./kms/libnsm.so /usr/lib64/
 
 COPY requirements.txt ./
 RUN pip3 install -r /app/requirements.txt
 
-ARG REGION_ARG=us-east-1
+ARG REGION_ARG=us-west-1
 ENV REGION=$REGION_ARG
 
 COPY server.py ./
